Closed
Bug 885642
Opened 13 years ago
Closed 13 years ago
avoid iterating SVG text frames when they are dirty, with svg.text.css-frames.enabled
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: heycam, Assigned: heycam)
References
Details
Attachments
(1 file, 1 obsolete file)
|
4.98 KB,
patch
|
longsonr
:
review+
|
Details | Diff | Splinter Review |
In case we miss reflowing our SVG text frames, we should just make the TextFrameIterator pretend there are no frames there. That will avoid relying on the outdated text node correspondence information.
Attachment #765784 -
Flags: review?(longsonr)
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → cam
Updated•13 years ago
|
Attachment #765784 -
Flags: review?(longsonr) → review+
| Assignee | ||
Comment 1•13 years ago
|
||
This assertion gets triggered by layout/reftests/bidi/bidiSVG-03.svg, it seems.
| Assignee | ||
Comment 2•13 years ago
|
||
And by any use of SVG text.
Testing a new patch: https://tbpl.mozilla.org/?tree=Try&rev=67d83808afbf
| Assignee | ||
Comment 3•13 years ago
|
||
Updated patch. Now instead of doing the check in TextFrameIterator, we do it in TextRenderedRunIterator and CharIterator. This is because UpdateFontSizeScaleFactor uses TextFrameIterator (but doesn't care about the correspondence with the content nodes) to look at the font sizes in use, and it does this after the anonymous kid is reflowed but before the remainder of ReflowSVG is done (which is where the dirty state bits are cleared).
Attachment #765784 -
Attachment is obsolete: true
Attachment #766234 -
Flags: review?(longsonr)
Updated•13 years ago
|
Attachment #766234 -
Flags: review?(longsonr) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•