Bug 885642 - Avoid iterating SVG text frames when they are dirty. r=longsonr